@@ -2,7 +2,8 @@ This file lists changes on this extension.
 Localisation updates are done on betawiki and aren't listed here.
 
 0.10.6 - 24 November 2008
-  Fixed overflowing bug for small screens in Special:Configure
+  * Fixed overflowing bug for small screens in Special:Configure
+  * Added $wgConfigureExtDir to allow to change the extensions base directory
 
 0.10.5 - 23 November 2008
   * New section "Popular settings" replacing "General settings" at the beginning
